--- a/client/index.html
+++ b/client/index.html
@@ -54,7 +54,7 @@
         </div>
         <div id="openScreen" class="wrap-modals bg-white">
             <div class="open-screen center-all">
-                <img class="w-100" src="img/open.png" alt="">
+                <img class="w-100" src="img/open.jpg" alt="">
             </div>
         </div>
         <div id="menu" class="bg-menu zindex5">
